# RTC-DS1302-PY

./: LICENSE  README.md  main.py  pyproject.toml  setup.py
ds1302/: __init__.py  ds1302.py
