[build-system]
requires = ["setuptools", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "ds1302"
dynamic = ["version"]
description = "Biblioteca para comunicação com RTC DS1302 na Raspberry Pi"
authors = [
    {name = "Guilherme Fernandes de Oliveira", email = "guilhermeferoliv@gmail.com"}
]
license = {file = "LICENSE"}
dependencies = ["RPi.GPIO"]
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
   "Programming Language :: Python :: 3",
   "License :: OSI Approved :: MIT License",
   "Operating System :: OS Independent"
]

[tool.setuptools]
packages = ["ds1302"]

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "no-local-version"

[project.urls]
"Homepage" = "https://github.com/guilhermefernandesk/RTC-DS1302-PY"
"Repository" = "https://github.com/guilhermefernandesk/RTC-DS1302-PY"
